<resources>
    <string name="app_name">TSSPDCL</string>
    <string name="version">"Version 1.11(OCR) DT: 21-12-2023"</string>
    <string name="MainsplashAppName">"SOUTHERN POWER DISTRIBUTION COMPANY of TS LTD. "</string>
    <string name="Poweredby">Powered by</string>
    <string name="ANALOGICSTECHINDIALTD">ANALOGICS TECH INDIA LTD.</string>
    <string name="Billing">Billing </string>
    <string name="MainMenuHeader">TSSPDCL BILLING</string>
    <string name="login">LOGIN</string>
    <string name="Username">UserId</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="Bill">Bill</string>
    <string name="Reports">Reports</string>
    <string name="Settings">Settings</string>
    <string name="Paper_Feed">Paper Feed</string>
    <string name="PC_Comm">PC-COMM</string>
    <string name="Online_Comm">Online Comm</string>
    <string name="download_apk">Download New Apk</string>
    <string name="B_TOTAL">B TOTAL : </string>
    <string name="PENDING">PENDING : </string>
    <string name="UPLOAD">UPLOAD : </string>
    <string name="BillingMenu">Billing Menu</string>
    <string name="Search">Search</string>
    <string name="Sequence">Sequence</string>
    <string name="Search_By_Name">Search By Name</string>
    <string name="IR">IR</string>
    <string name="sasa_bill_print">SASA BILL PRINT</string>
    <string name="Photo">Photo</string>
    <string name="ManualReading">Manual Reading</string>
    <string name="T_MONS_to_5">T-MONS To 5</string>
    <string name="IRDA">IRDA</string>
    <string name="Search_sahasra_BillPay">Search Sahasra BillPay</string>
    <string name="ero_no">ERO NO</string>
    <string name="enter_ero_no">Enter ERO NO</string>
    <string name="ReportsMenu">Reports Menu</string>
    <string name="CatagoryReport">General Report</string>
    <string name="DemandReport">Demand Report</string>
    <string name="StatusReport">Online Report</string>
    <string name="Bill_UnbilledReport">Display Report</string>
    <string name="PC_CommunicationMenu">PC Communication Menu</string>
    <string name="PC_To_SBM">PC To SBM</string>
    <string name="SBM_To_PC">SBM To PC</string>
    <string name="Image_Upload">Image Upload</string>
    <string name="Online_CommunicationMenu">Online Communication Menu</string>
    <string name="ERO_Code">ERO Code</string>
    <string name="SectionId">SectionId</string>
    <string name="DownloadData">Download Data</string>
    <string name="ServerPush">Bulk Upload</string>
    <string name="AppendData">Append Data</string>
    <string name="PatchUpdate">Patch Update</string>
    <string name="ImageUpload">Image Upload</string>
    <string name="BulkUpload">Bulk Upload</string>
    <string name="BillSequence">Bill Sequence</string>
    <string name="ServiceNo">ServiceNo</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Address1">Address1</string>
    <string name="USCNo">USCNo</string>
    <string name="MeterNo">MeterNo</string>
    <string name="Catagory">Category</string>
    <string name="SubCatagory">Sub-Cat</string>
    <string name="Phase">Phase</string>
    <string name="ContractedLoad">Contracted Load</string>
    <string name="ConnectedLoad">Connected Load</string>
    <string name="MeterTC_Seal">MTR TC-Seal No</string>
    <string name="MeterMake">Meter Make</string>
    <string name="MeterCapacity">Meter Capacity</string>
    <string name="BillSearchBy">Bill SearchBy</string>
    <string name="GetDetails">Get Details</string>
    <string name="areaCode">Area Code</string>
    <string name="DistCode">Dist Code</string>
    <string name="ServiceNoEntry">Service No:</string>
    <string name="SearchBy">SearchBy</string>
    <string name="Back">Back</string>
    <string name="OK">OK</string>
    <string name="Next">Next</string>
    <string name="PresentKWH">Present KwH</string>
    <string name="PresentKvah">Present Kvah</string>
    <string name="NewKWH">New Mtr KwH</string>
    <string name="NewKvah">New Mtr Kvah</string>
    <string name="RMD">RMD</string>
    <string name="Solar_KWH">Solar KWH</string>
    <string name="SolarFlag">Solar Flag</string>
    <string name="SC_ST_FLAG">SC/ST Flag</string>
    <string name="SolarExportKWH">Solar Export KWH</string>
    <string name="IrDA_Flag">IrDA Flag</string>
    <string name="CapacitorFlag">Capacitor Flag</string>
    <string name="MF">MF</string>
    <string name="OldMeterUnits">Old Meter Units</string>
    <string name="NewMeterIR_KWH">New Meter IR KWH</string>
    <string name="PresentMeterStatus">Present Meter Status</string>
    <string name="BillCalculation">Bill Calculation</string>
    <string name="action_download_masters">"Download Masters"</string>
    <string name="BillReading">Bill Reading</string>
    <string name="ApproximateReading">Approximate Reading</string>
    <string name="ExtraConsumption">Extra Consumption</string>
    <string name="PreviousMeterStatus">Previous Meter Status</string>
    <string name="Old_Average_Units">Old Average Units</string>
    <string name="PreviousReadingKWH">Previous ReadingKWH</string>
    <string name="PreviousReadingKVah">Previous ReadingKVah</string>
    <string name="Reset">Reset</string>
    <string name="APSPDCL_IRDA">TSSPDCL IRDA</string>
    <string name="APSPDCL_IR">TSSPDCL IR/IRDA</string>
    <string name="title_activity_search__by__name">Search_By_NameActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="anyline">Anyline</string>
    <string name="anyline_email" translatable="false">hello@anyline.com</string>
    <string name="anyline_website_link" translatable="false"><u>www.anyline.com</u></string>
    <string name="anyline_website_samples_link" translatable="false"><u>www.anyline.com/samples</u></string>
    <string name="anyline_website_samples_link_https" translatable="false"><u>https://www.anyline.com/samples/</u></string>
    <string name="anyline_website_download_link_https" translatable="false"><u>https://www.anyline.com/free-demos/</u></string>
    <string name="anyline_portal_link" translatable="false"><u>https://portal.anyline.com/HW0HPL0MmPKVDvDIKXfHEt6Vuy5fg2Eo5FZ7kxzCyupEO,22</u></string>
    <string name="scan_mrz">Scan MRZ</string>
    <string name="read_nfc">Read NFC</string>
    <string name="gas_meter">Gas Meter</string>
    <string name="water_meter">Water Meter</string>
    <string name="digital_meter">Digital Meter</string>
    <string name="barcode">Barcode / QR-Code</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="mrz">MRZ / Passport</string>
    <string name="mrz_main">Passport MRZ</string>
    <string name="heat_meter">Heat Meter</string>
    <string name="universal_id_scanning">Universal ID Scanner</string>
    <string name="electric_meter">Electric Meter</string>
    <string name="auto_analog_digital_meter">Analog/Digital Meter</string>
    <string name="dial_meter">Dial (Alpha)</string>
    <string name="serial_number">Universal Serial Number</string>
    <string name="shipping_container">Shipping Container</string>
    <string name="vertical_shipping_container">Vertical Shipping Container</string>
    <string name="tin">TIN</string>
    <string name="serial_number_energy">Serial Number</string>
    <string name="heat_meter_4_3">4 pre-decimal places</string>
    <string name="heat_meter_5_3">5 pre-decimal places</string>
    <string name="heat_meter_6_3">6 pre-decimal places</string>
    <string name="camera_permission_required">Permissions</string>
    <string name="camera_permission_required_details">Anyline needs the permission to access the camera in
        order to scan.</string>
    <string name="camera_permission_denied">"Permission denied to use the Camera"</string>
    <string name="mrz_result_details">
        Name: %1$s %2$s\nNo.: %3$s\nCountry Code: %4$s\nDay of Birth: %5$s\nExpiration Date: %6$s
    </string>
    <string name="pref_reporting_key" translatable="false">reporting_enabled</string>
    <string name="pref_reset_key" translatable="false">reset</string>
    <string name="pref_version_key" translatable="false">version</string>
    <string name="pref_reporting">Report Results</string>
    <string name="pref_reporting_summary">
        The reporting of results in the Community Edition, including the photo of a scanned item,
        helps us improve our product and the customer experience.
        Results and images of the MRZ, Barcode, and Document modules are NOT
        reported in any case.
    </string>
    <string name="pref_reset_title">Reset Data</string>
    <string name="pref_dialog_reset_message">Reset all scan data?</string>
    <string name="pref_reset_msg">This will clear all of the data you have generated whilst using the app.</string>
    <string name="version_info">Version</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="document">Document</string>
    <string name="document_ui">Document UI</string>
    <string name="scan_document">Scan Document</string>
    <string name="document_advanced_outline_detection">Advanced Outline Detection</string>
    <string name="document_fast_outline_detection">Fast Outline Detection</string>
    <string name="document_error_not_sharp">Document is not sharp. Please hold the camera steadily and ensure the document is in focus</string>
    <string name="document_error_skew_too_high">Document is skewed. Place the camera directly above the document</string>
    <string name="document_error_outline_not_found">Could not detect document outline</string>
    <string name="document_error_glare_detected">Please remove the glare</string>
    <string name="document_error_too_dark">The image is too dark. Please ensure there is enough light</string>
    <string name="document_error_unknown">Unknown Failure</string>
    <string name="document_picture_error">Error scanning full document:\n</string>
    <string name="document_preview_success">Scanning full document. Please hold still</string>
    <string name="document_picture_success">Document scanned successfully</string>
    <string name="document_using_fast_mode">Switched to fast detection mode</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="no_data">No data</string>
    <string name="initializePrinter">Initialize Printer</string>
    <string name="btn_fonts">Font Sizes</string>
    <string name="btnLeft">Left Align</string>
    <string name="btn_Center">Center Align</string>
    <string name="btn_Right">Right Align</string>
    <string name="btn_EmphasizedON">Font Emphasize ON</string>
    <string name="btn_EmphasizedOFF">Font Emphasize OFF</string>
    <string name="btn_FontA">Font A</string>
    <string name="btn_FontB">Font B</string>
    <string name="btn_FontC">Font C</string>
    <string name="btn_UnderlineON">Underline ON</string>
    <string name="btn_UnderlineOFF">Underline OFF</string>
    <string name="btn_ImagePrint">Image Print</string>
    <string name="btn_doubleStrikeModeOFF">DoubleStrikeMode OFF</string>
    <string name="btn_doubleStrikeModeON">DoubleStrikeMode ON</string>
    <string name="btn_QrcodePrint">Qrcode Print</string>
    <string name="btn_ReceiptPrint">Receipt Print</string>
    <string name="Btn_BlackmarkSensor">Blackmark Sensor</string>
    <string name="btn_BillReceiptPrint">Bill Receipt Print </string>
</resources>