<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter text here to print."
        android:id="@+id/ET_PrintData"
 />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:id="@+id/Btn_Connect"
        android:layout_weight="1"

        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/whatsapp"
        android:textColor="@color/white"
        android:onClick="onClickConnect" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disconnect"
        android:id="@+id/Btn_Disconnect"
        android:background="@color/weibo"
        android:textColor="@color/white"

        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"

        android:layout_weight="1"
        android:onClick="onClickDisconnect" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connection Status"

            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/blogger"
            android:textColor="@color/white"


            android:layout_weight="1"
            android:onClick="onClickConnectionStatus" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"

        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_InitializePrinter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/initializePrinter"
        >
        </Button>

        <Button
            android:id="@+id/btn_fonts"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_fonts"
           >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btnLeft"
            >
        </Button>

        <Button
            android:id="@+id/btn_Center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_Center"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_Right"
       />

        <Button
            android:id="@+id/btn_FontA"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_FontA"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_FontB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btn_FontB"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_FontC"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_FontC"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_EmphasizedON"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_EmphasizedON"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_EmphasizedOFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_EmphasizedOFF"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_UnderlineON"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_UnderlineON"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_UnderlineOFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_UnderlineOFF"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_doubleStrikeModeON"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_doubleStrikeModeON"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_doubleStrikeModeOFF"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_doubleStrikeModeOFF"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_IMagePrint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_ImagePrint"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_QrcodePrint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_QrcodePrint"
            android:textStyle="bold" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/btn_ReceiptPrint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_ReceiptPrint"
            android:textStyle="bold" />
        <Button
            android:id="@+id/Btn_BlackmarkSensor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/Btn_BlackmarkSensor"
            android:textStyle="bold" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/Btn_BillReceiptPrint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"

            android:text="@string/btn_BillReceiptPrint"
            android:textStyle="bold" />

    </LinearLayout>    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="horizontal" >



    </LinearLayout>





    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:id="@+id/data_value" />
    </LinearLayout>


</LinearLayout>