<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/border_black"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEroNO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:text="@string/ero_no"
            android:textColor="@color/black_100"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/close" />


    </RelativeLayout>

    <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
       <EditText
           android:id="@+id/etenterEROno"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/border_black"
           android:hint="@string/enter_ero_no"
           android:gravity="center"
           >
       </EditText>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/negative"
            style="@style/AlertDialogButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/positive"
            style="@style/AlertDialogButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>